# serializer version: 1
# name: test_button[load_platforms0][button.bedroom_reset_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.bedroom_reset_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_filter',
    'unique_id': 'BBZZBBZZ-reset_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[load_platforms0][button.bedroom_reset_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedroom Reset filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.bedroom_reset_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[load_platforms0][button.hallway_reset_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.hallway_reset_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_filter',
    'unique_id': 'ABC999111-reset_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[load_platforms0][button.hallway_reset_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hallway Reset filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.hallway_reset_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_button[load_platforms0][button.kitchen_reset_filter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.kitchen_reset_filter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Reset filter',
    'platform': 'sensibo',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'reset_filter',
    'unique_id': 'AAZZAAZZ-reset_filter',
    'unit_of_measurement': None,
  })
# ---
# name: test_button[load_platforms0][button.kitchen_reset_filter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Reset filter',
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen_reset_filter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
